# feefifofum

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  README.md  pyproject.toml
.github/workflows/: tests.yaml
feefifofum/: __init__.py  main.py
feefifofum/core/: format.py  parse.py  process.py  table.py  whitespace.py
feefifofum/helpers/: constants.py  table.py  whitespace.py
feefifofum/utils/: file_utils.py  log.py
tests/: test_file_utils.py  test_format.py  test_main.py
tests/data/: example_expected.feature  example_input.feature  full_file_expected.feature  full_file_input.feature  text_only_expected.feature  text_only_input.feature
