[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feefifofum"
version = "0.1.0"
description = "Feature file formatter"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/rushwerks/feefifofum"

[project.scripts]
feefifofum = "feefifofum:format"

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"
