[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feefifofum"
version = "0.1.1"
requires-python = ">=3.7"
description = "Feature file formatter"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["BDD", "behavior-driven-development", "gherkin", "feature", "formatter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Testing :: BDD",
]

[project.urls]
Homepage = "https://github.com/rushwerks/feefifofum"

[project.scripts]
feefifofum = "feefifofum:format"

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "single"
